--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learndash",
+  "name": "learndash-headless",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.8",
-    "@material-tailwind/react": "^1.2.5",
-    "@next/font": "13.1.5",
-    "next": "13.1.5",
+    "@next/font": "13.1.6",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
