--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@next/font": "13.1.6",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
