--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=http://learndash-headless.irjck4mzt7-gok67wnk9452.p.temp-site.link/wp-json
+NEXT_PUBLIC_API_URL=https://headlearn.thenwg.xyz/wp-json
