--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.1",
