--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.8",
     "@next/font": "13.1.6",
     "classnames": "^2.3.2",
+    "daisyui": "^2.51.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "js-cookie": "^3.0.1",
