--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.1.6",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
