--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.1",
