single blog next privious

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_URL=https://headlearn.thenwg.xyz/wp-json
-API_BASE_URL=https://cesimple.wpengine.com/wp-json
-# BLOG_API_URL= https://cesimple.wpengine.com/wp-json
+NEXT_PUBLIC_API_BASE_URL=https://cesimple.wpengine.com/wp-json
+
