--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.51.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^10.12.16",
     "html-react-parser": "^4.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
