--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@next/font": "13.1.6",
+    "@types/hammerjs": "^2.0.41",
     "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.12.16",
+    "hammerjs": "^2.0.8",
     "html-react-parser": "^4.0.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
