--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@next/font": "13.1.6",
     "@types/hammerjs": "^2.0.41",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.2",
     "daisyui": "^2.51.5",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.12.16",
     "hammerjs": "^2.0.8",
     "html-react-parser": "^4.0.0",
-    "js-cookie": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
