--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
+    "recoil": "^0.7.7",
     "sharp": "^0.31.3",
     "swr": "^2.1.5"
   },
