payment gateway testing

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_API_URL=https://headlearn.thenwg.xyz/wp-json
 NEXT_PUBLIC_API_BASE_URL=https://cesimple.wpengine.com/wp-json
+NEXT_PUBLIC_STRIPE_SECRET_KEY=sk_live_Ye4rR3Yyo2aEpoh2Pa8jH3OP007Ly7Hcef
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_DJcmrzzOZxupHTRuHG6MiWZn00t5wvHLIj
 
