--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@next/font": "13.1.6",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.0",
     "@types/hammerjs": "^2.0.41",
     "classnames": "^2.3.2",
     "cookies-next": "^2.1.2",
@@ -34,6 +36,7 @@
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "sharp": "^0.31.3",
+    "stripe": "^12.9.0",
     "swr": "^2.1.5"
   },
   "devDependencies": {
